--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.html
@@ -1,3 +1,3 @@
 <div class="main-container" (click)="select()">
-    <p>{{checkUp.name}} <i class="fa fa-check" [class.selected]="selected"></i></p>
+    <p>{{checkUp.name}} <i *ngIf="!controllable" class="fa fa-check" [class.selected]="selected"></i></p>
 </div>
