CheckUp models done!

--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.html
@@ -12,7 +12,7 @@
             <i class="fa fa-plus" (click)="addCheckUp()"></i>
         </p>
         <div class="col col-md-6" *ngFor="let checkUp of checkUpType.checkUps">
-            <app-check-up [controllable]="controllable" [selectedCheckUps]="selectedCheckUps" [checkUp]="checkUp"></app-check-up>
+            <app-check-up (deleteEvent)="onCheckUpDeleted($event)" [controllable]="controllable" [selectedCheckUps]="selectedCheckUps" [checkUp]="checkUp"></app-check-up>
         </div>
     </div>
 </div>
