Add Certificat Model done

--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.css
@@ -34,7 +34,7 @@ p:not(.check-ups p):hover {
     color: rgb(254, 101, 85);
 }
 
-.main-container:hover .control {
+.main-container p:hover .control {
     opacity: 1;
 }
 
