Prescription manager done

--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" (click)="select()">
+<div class="main-container" (click)="select()" [class.selected]="selected">
     <p>{{checkUp.name}}
         <i *ngIf="!controllable" class="fa fa-check" [class.selected]="selected"></i>
     </p>
