--- a/src/app/components/dashboard/content/prescription-manager/prescription-manager.component.html
+++ b/src/app/components/dashboard/content/prescription-manager/prescription-manager.component.html
@@ -1,25 +1,29 @@
 <div class="main-container">
     <app-header></app-header>
     <div class="inner-navigation row">
-        <a [class.selected]="selectedOption == 'prescriptions'" routerLink="prescriptions">
+        <a [class.selected]="selectedOption == 'prescriptions'" routerLink="/dashboard/prescription-manager/prescriptions">
             <i class="fa fa-prescription-bottle-alt"></i>
             <span>Ordonnance</span>
         </a>
-        <a [class.selected]="selectedOption == 'check-ups'" routerLink="check-ups">
+        <a [class.selected]="selectedOption == 'check-ups'" routerLink="/dashboard/prescription-manager/check-ups">
             <i class="fa fa-vials"></i> <span>Bilan</span>
         </a>
 
-        <a [class.selected]="selectedOption == 'certificats'" routerLink="certificats">
+        <a [class.selected]="selectedOption == 'certificats'" routerLink="/dashboard/prescription-manager/certificats">
             <i class="fa fa-envelope-open-text"></i> <span>Certificats</span>
         </a>
     </div>
     <div class="body stretch-container">
+
         <div class="submitter primary-radius">
-            <router-outlet></router-outlet>
+
+            <app-prescription-models (useEvent)="usePrescription($event)" *ngIf="selectedOption == 'prescriptions'"></app-prescription-models>
+            <app-check-ups-models [checkUpTypes]="checkUpTypes" [visit]="visit" *ngIf="selectedOption == 'check-ups'"></app-check-ups-models>
+            <app-certificats-models (certificatSelected)="selectCertificat($event)" (typeChanged)="typeChanged($event)" *ngIf="selectedOption == 'certificats'"></app-certificats-models>
 
         </div>
         <div class="prescription primary-radius">
-            <app-prescription [visit]="visit"></app-prescription>
+            <app-prescription [certificat]="selectedCertificat" [type]="prescriptionType" [checkUpTypes]="checkUpTypes" [title]="prescriptionTitle" [visit]="visit"></app-prescription>
         </div>
     </div>
 </div>
