Home Page perfected

--- a/src/app/components/dashboard/content/general/diagnosis-analytics/diagnosis-analytics.component.css
+++ b/src/app/components/dashboard/content/general/diagnosis-analytics/diagnosis-analytics.component.css
@@ -3,3 +3,13 @@
     border-radius: 16px;
     padding: 16px;
 }
+
+.row {
+    height: 260px;
+    max-height: 260px;
+    overflow: auto;
+}
+
+.no-data-message {
+    padding: 8px 16px;
+}
