--- a/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room-patient/general-waiting-room-patient.component.html
+++ b/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room-patient/general-waiting-room-patient.component.html
@@ -5,8 +5,8 @@
 
     </div>
     <div class="info-container">
-        <h5>{{visit.medicalFile.lastname}} {{visit.medicalFile.name}}</h5>
-        <p class="age">l'age : <span>{{ age }} ans</span> </p>
-        <p class="visit-time"> le temps d'arrivé <span>{{visit.arrivalTime}}</span> </p>
+        <h5> {{visit.medicalFile.name}} {{visit.medicalFile.lastname}}</h5>
+        <p class="age">âge : <span>{{ age }} ans</span> </p>
+        <p class="visit-time">temps d'arrivée <span>{{visit.arrivalTime}}</span> </p>
     </div>
 </div>
