--- a/src/app/components/global/evolution-cart/evolution-cart.component.html
+++ b/src/app/components/global/evolution-cart/evolution-cart.component.html
@@ -7,12 +7,12 @@
                 <i *ngIf="evolutionParam.evolutionPercentage <  0"class="fa fa-chevron-down"></i> 
                 {{getPercentage}} %
             </span>
-            <p>rapport au dernier {{periodText}}</p>
+            <p>par rapport au dernier {{periodText}}</p>
         </div>
     </div>
     <div class="bottom">
         <h6>{{evolutionParam.name}}</h6>
-        <span>{{evolutionParam.evolutionValue}}</span>
+        <span>  {{evolutionParam.evolutionValue}}</span>
         <i class="fa fa-chart-bar"></i>
     </div>
 </div>
