--- a/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room.component.html
+++ b/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room.component.html
@@ -1,13 +1,9 @@
 <div class="main-container primary-radius">
     <h5>
-        Salle d'attent
+        Salle d'attente
     </h5>
     <div class="patients-list">
-
-        <p class="no-data-message" *ngIf="visits.length == 0">Aucun patient est prsente dans la salle d'attent</p>
-
+        <p class="no-data-message" *ngIf="visits.length == 0">la salle d'attente est vide</p>
         <app-general-waiting-room-patient *ngFor="let visit of visits" [visit]="visit"></app-general-waiting-room-patient>
-
     </div>
-
 </div>
