--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.css
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.css
@@ -7,4 +7,9 @@
     background: white;
     padding: 16px;
     position: relative;
+    height: 680px;
+}
+
+.body.no-controllable {
+    height: 742px;
 }
