--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/patients-list.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/patients-list.component.html
@@ -2,17 +2,30 @@
     <div class="header">
         <h5 [ngStyle]="{'background-color' : color }">{{header}}</h5>
     </div>
-    <div class="list" *ngIf="!done" cdkDropList (cdkDropListDropped)="drop($event)">
-
+    <div class="list" *ngIf="!done && controllable" cdkDropList (cdkDropListDropped)="drop($event)">
+        <p class="no-data-message" *ngIf="visits.length == 0">Acun patient en attente</p>
         <div class="visit" *ngFor="let visit of visits; let i = index" cdkDrag cdkDragLockAxis="y">
-            <app-visit (visitDoneEvent)="visitDoneEvent.emit($event)" [waitingRoom]="waitingRoom" (outVisitEvent)="outVisitEvent.emit($event)" (restoreVisitEvent)="restoreVisitEvent.emit($event)" (ignoreVisitEvent)="ignoreVisitEvent.emit($event)" (inVisitEvent)="inVisit($event)"
-                [currentVisit]="currentVisit && currentVisit.id == visit.id" [visit]="visit" [nextSubject]="visitsSubjects[i].subject" [done]="done"></app-visit>
+            <app-visit [controllable]="controllable" (visitDoneEvent)="visitDoneEvent.emit($event)" [waitingRoom]="waitingRoom" (outVisitEvent)="outVisitEvent.emit($event)" (restoreVisitEvent)="restoreVisitEvent.emit($event)" (ignoreVisitEvent)="ignoreVisitEvent.emit($event)"
+                (inVisitEvent)="inVisit($event)" [currentVisit]="currentVisit && currentVisit.id == visit.id" [visit]="visit" [nextSubject]="visitsSubjects[i].subject" [done]="done"></app-visit>
         </div>
     </div>
 
+
+    <div class="list" *ngIf="!done && !controllable">
+        <p class="no-data-message" *ngIf="visits.length == 0">aucun visite en attente</p>
+
+        <div class="visit" *ngFor="let visit of visits; let i = index">
+            <app-visit [controllable]="controllable" (visitDoneEvent)="visitDoneEvent.emit($event)" [waitingRoom]="waitingRoom" (outVisitEvent)="outVisitEvent.emit($event)" (restoreVisitEvent)="restoreVisitEvent.emit($event)" (ignoreVisitEvent)="ignoreVisitEvent.emit($event)"
+                (inVisitEvent)="inVisit($event)" [currentVisit]="currentVisit && currentVisit.id == visit.id" [visit]="visit" [nextSubject]="visitsSubjects[i].subject" [done]="done"></app-visit>
+        </div>
+    </div>
+
+
     <div class="list" *ngIf="done">
+        <p class="no-data-message" *ngIf="visits.length == 0">aucun visite affectués</p>
+
         <div class="visit" *ngFor="let visit of visits">
-            <app-visit [visit]="visit" [done]="done" [newDone]="visit.newDone"></app-visit>
+            <app-visit [controllable]="controllable" [visit]="visit" [done]="done" [newDone]="visit.newDone"></app-visit>
         </div>
     </div>
 </div>
