Visit Information perfected

--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-clincal-exam/visit-clincal-exam.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-clincal-exam/visit-clincal-exam.component.html
@@ -3,7 +3,7 @@
     <app-no-visit-background *ngIf="!active"></app-no-visit-background>
     <h5>Examen Clinique</h5>
     <p (click)="openManager()">
-        Charger un examen predefiné <i class="fa fa-file-medical-alt"></i>
+        Charger un examen prédéfini <i class="fa fa-file-medical-alt"></i>
     </p>
     <textarea (keyup)="change()" [(ngModel)]="exam" placeholder="Examen clinique"></textarea>
 </div>
